--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body, h1, h2, h3, p, ul, li {
   }
   
   .hero {
-    background-image: url('./pexels-steven-arenas-314374.jpg');
+    background-image: url('./images/pexels-steven-arenas-314374.jpg');
     background-size: cover;
     background-position: center;
     height: 500px;
@@ -113,3 +113,6 @@ body, h1, h2, h3, p, ul, li {
     padding: 10px;
   }
   
+  .stTm{
+    padding-right: 2%;
+  }
