--- a/paymentpage.css
+++ b/paymentpage.css
@@ -1,53 +1,28 @@
-#backgroundImage {
-    background-image: url(https://static.vecteezy.com/system/resources/thumbnails/001/225/154/small/black-low-poly-geometric-background.jpg);
-     position: fixed;
-     left: 0;
-     top: 0;
-     width: 100%;
-     height: 100%;
-     background-size: contain;
-     filter: blur(0px);
- }
- 
- div{
-     display: block;
- }
- body,h1{
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     min-height: 100vh;
-     overflow: hidden;
-     color: aliceblue;
- }
- form{
-     display: block;
-     width: 400px;
-     position: relative;
-     margin-top: 0rem;
-     color: aliceblue;
- }
- form .form-field{
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     position: relative;
-     -webkit-box-align: center;
-     margin-bottom: 1rem;
-     -webkit-box-pack: justify;
-     color: aliceblue;
- }
- 
- form input{
-     font-family: inherit;
-     width: 100%;
-     outline: none;
-     border-radius: 4px;
-     border: none;
-     display: block;
-     padding: 0.9rem 0.7rem;
-     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-     font-size: 17px;
-     color: #4A4A4A;
-     text-indent: 40px;
- }
+body {
+    background-image: url('./images/photo-1608286022625-bc07f7a21154.avif');
+    background-size: cover;
+  }
+  
+  .container {
+    height: 100vh;
+  }
+  
+  .card {
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .card-header {
+    border-bottom: none;
+  }
+  
+  .btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+  }
+  
+  .btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+  }
+  
