--- a/style2.css
+++ b/style2.css
@@ -1,12 +1,13 @@
 #backgroundImage {
-    background-image: url(http://static2.businessinsider.com/image/59c13ac338d20d2a008b7fd5-1819/8077359796933048871bk.jpg);
+    background-image: url(./images/781960.jpg);
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background-size: contain;
-    filter: blur(5px);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 div{
     display: block;
@@ -17,6 +18,9 @@ body{
     align-items: center;
     min-height: 100vh;
     overflow: hidden;
+    background-color: black;
+    font-family: 'Poppins', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
 }
 form{
     display: block;
